--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,8 @@ section img {
 }
 .text {
     text-align: justify;
+    hyphens: auto;
+    word-wrap: break-word;
 }
 .text p {
     font-size: .9rem;
