--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ nav {
     display: flex;
     justify-content: flex-end;
     padding-block: 15px;
+    z-index: 100000;
 }
 nav i {
     margin-inline: 20px;
@@ -46,7 +47,6 @@ section img {
     background: rgb(240, 240, 240);
     padding: 20px;
     margin-block: 50px;
-    box-shadow: 3px 3px 1px rgba(10, 10, 10, .1);
 }
 #gif {
     width: 90px;
@@ -77,6 +77,7 @@ section img {
     background: darkblue;
     color: white;
     padding: 30px;
+    border-radius: 10px;
 }
 .summary img {
     width: 80%;
@@ -116,4 +117,58 @@ footer div {
 .three-images img {
     width: 25%;
     margin-inline: 10px;
+}
+
+/* OTHER PAGES */
+
+
+.date {
+    background: rgb(240, 240, 240);
+    width: 60px;
+    padding: 10px;
+    font-size: .5rem;
+    text-align: center;
+    position: absolute;
+    right: 30px;
+    top: 120px;
+}
+.date span {
+    font-size: 1.5rem;
+}
+.margin-topper {
+    margin-top: 100px;
+}
+.desc {
+    display: flex;
+    margin-bottom: 20px;
+}
+.desc p {
+    margin: 2px;
+    font-size: .8rem;
+}
+.p-space p {
+    margin-top: 10px;
+}
+.gallery {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-items: center;
+}
+.gallery img {
+    width: 95%;
+}
+.valley {
+    background: rgb(240, 240, 240);
+}
+.valley h2 {
+    text-align: center;
+    margin-bottom: 15px;
+}
+.valley-img {
+    width: 90%;
+    margin-block: 10px;
+}
+.centered {
+    display: grid;
+    justify-items: center;
 }
