--- a/styles.css
+++ b/styles.css
@@ -171,11 +171,49 @@ footer div {
 .centered {
     display: grid;
     justify-items: center;
+    text-align: center;
 }
-.p-space h2 {
+.p-space h2, .text h2 {
     text-align: center;
 }
 .underline {
     text-align: center;
     text-decoration: underline;
+}
+.space-bottom {
+    margin-bottom: 15px;
+}
+.paragraphs p {
+    margin-bottom: 10px;
+}
+.temp-sec {
+    display: flex;
+}
+#temp-sec .left {
+    text-align: left;
+    margin-left: 30px;
+}
+#temp-sec img {
+    width: 100px;
+}
+.temp-sec div p:first-child {
+    text-align: center;
+}
+.temp-sec h3 {
+    margin-bottom: 10px;
+}
+.temp-sec img {
+    width: 200px;
+    margin-right: 20px;
+}
+#left-align {
+    text-align: left;
+}
+.gray {
+    background: rgb(240, 240, 240);
+    padding-block: 20px;
+}
+ul {
+    padding-inline: 10px;
+    margin-block: 10px;
 }
