--- a/styles.css
+++ b/styles.css
@@ -214,8 +214,11 @@ footer div {
     text-align: left;
     margin-left: 0px;
 }
-#temp-sec img {
-    width: 50px;
+.temp-sec img {
+    width: 20px;
+}
+.temp-sec div:last-child {
+    width: 120px;
 }
 .temp-sec div p:first-child {
     text-align: center;
@@ -233,7 +236,6 @@ footer div {
 .gray {
     background: rgb(240, 240, 240);
     padding-block: 20px;
-    width: 100%;
 }
 ul {
     padding-inline: 10px;
