--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 }
 body {
     font-family: "Montserrat", sans-serif;
+    background: white;
 }
 nav {
     background: rgb(240, 240, 240);
@@ -221,6 +222,9 @@ footer div {
 .temp-sec {
     display: flex;
 }
+#temp-img {
+    width: 150px;
+}
 #temp-sec .left {
     text-align: left;
     margin-left: 30px;
@@ -242,6 +246,9 @@ footer div {
 }
 .temp-sec img {
     width: 200px;
+}
+#special div:last-child {
+    margin-left: -5px;
 }
 #left-align {
     text-align: left;
@@ -313,5 +320,8 @@ ul {
     }
     .three img, .two img {
         width: 250px;
+    }
+    #special div:last-child {
+       margin-left: 40px; 
     }
 } 
